--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -6,17 +6,33 @@
     android:layout_height="match_parent"
     tools:context=".ui.fragments.SearchFragment">
 
+    <ImageView
+        android:id="@+id/search_fragment_add_btn"
+        android:layout_width="@dimen/icon_size"
+        android:layout_height="@dimen/icon_size"
+        android:src="@drawable/ic_add"
+        android:layout_margin="@dimen/normal_margin"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:layout_width="@dimen/icon_size"
+        android:layout_height="@dimen/icon_size"
+        android:src="@drawable/ic_profile"
+        android:layout_margin="@dimen/normal_margin"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
+        android:id="@+id/search_fragment_i_want_buy_sell"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Фрагмент поиска"
+        android:textSize="42sp"
+        tools:text="Я хочу купить"
         android:textColor="@color/colorTextBlack"
-        android:textSize="22sp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:drawableRight="@drawable/ic_arrow_down"
+        android:layout_margin="@dimen/normal_margin"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
-
-
+        app:layout_constraintTop_toBottomOf="@id/search_fragment_add_btn"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
