--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,5 @@
     <dimen name="normal_margin">16dp</dimen>
     <dimen name="big_margin">36dp</dimen>
     <dimen name="button_corners_radius">28dp</dimen>
+    <dimen name="icon_size">25dp</dimen>
 </resources>
