--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -24,15 +24,27 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/search_fragment_i_want_buy_sell"
+        android:id="@+id/search_fragment_i_want_buy_sell_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="42sp"
-        tools:text="Я хочу купить"
+        android:text="Я хочу купить"
         android:textColor="@color/colorTextBlack"
         android:drawableRight="@drawable/ic_arrow_down"
         android:layout_margin="@dimen/normal_margin"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/search_fragment_add_btn"/>
+
+    <TextView
+        android:id="@+id/search_fragment_arrartment_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="42sp"
+        android:text="квартиру"
+        android:textColor="@color/colorRedBtn"
+        android:drawableRight="@drawable/ic_arrow_down"
+        android:layout_margin="@dimen/normal_margin"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/search_fragment_i_want_buy_sell_tv"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
