--- a/frontend/pug/sass/DCButton.scss
+++ b/frontend/pug/sass/DCButton.scss
@@ -2,10 +2,16 @@
 	width: 100%;
 	font-size: 16px;
 	line-height: 19px;
+
+	.DC-button:not(:last-child) {
+		margin-right: 8px;
+	}
 }
 
 .DC-button {
 	display: inline-block;
+	font-size: 14px;
+	line-height: 16px;
 	padding: 8px 30px;
 	color: #828282;
 	background-color: transparent;
