--- a/frontend/src/components/DCInputField/style.scss
+++ b/frontend/src/components/DCInputField/style.scss
@@ -5,8 +5,11 @@
 		font-size: 32px;
 		line-height: 37px;
 
+		span {
+			margin-bottom: 24px;
+		}
+
 		.DC-input {
-			margin-top: 24px;
 			font-size: 16px;
 			line-height: 19px;
 			border: none;
